# usaa-fraud-project

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  detect_fraud.py  fraud_analysis_report.txt  ftc_consumer_scams.py  ftc_legal_cases.py  ftc_press_releases.py  main.py  modal_deploy.py  pyproject.toml  requirements.txt  supabase_load.py  test_debug.py  utils.py
archive/progress_report_1/: data_spotlight_xml.py  legal_library_search.py  rss_ftc.py
dashboard/: analytics.py  app.py  app.py.save
dashboard/pages/: analytics.py  app.py  article_browser.py  overview.py  upload_analyzer.py
dashboard/utils/: data_loader.py
data/: 11-13_ftc_press_releases_scrapy.json  DNC.csv  ftc_consumer_scams.jsonl  ftc_data_spotlight.jsonl  ftc_legal_cases.jsonl  ftc_legal_search.jsonl  ftc_legal_search_fraud.jsonl  ftc_press_releases.jsonl
src/: __init__.py  pipelines.py  scrapy.cfg  settings.py
src/data2/: ftc_press_releases_scrapy.json
src/database/: __init__.py  supabase_load.py
src/detect/: __init__.py
src/scrapers/: __init__.py  ftc_consumer_scams.py  ftc_dnc_csv.py  ftc_legal_cases.py  ftc_press_releases.py
src/scripts/: annotated_fraud_viz.py  data_summary_report.py  run_all_scrapers.py  run_scraper.py  visualize_embeddings.py
src/utils/: __init__.py  data_loader.py  keywords.py
src2/: README.md  items.py  run_spider.sh  settings.py
src2/analysis/: fraud_analysis_results_20251115_133101.json  fraud_analysis_results_20251115_134154.csv  fraud_analysis_results_20251115_134154.json  nlp_pipeline.py  semantic_search.py  (+5 more)
visualizations/: embeddings.npz
(+6 files in other folders)
