[project]
name = "ftc-scrapers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.12.3",
    "bs4>=0.0.2",
    "detect>=2020.12.3",
    "feedparser==6.0.11",
    "lxml==5.3.0",
    "python-dotenv>=1.2.1",
    "requests==2.32.3",
    "supabase>=2.24.0",
]
