[project]
name = "ftc-scrapers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.12.3",
    "bertopic>=0.17.3",
    "bs4>=0.0.2",
    "detect>=2020.12.3",
    "feedparser==6.0.11",
    "keybert>=0.9.0",
    "lxml==5.3.0",
    "modal>=1.2.4",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "python-dotenv>=1.2.1",
    "requests==2.32.3",
    "scrapy>=2.13.3",
    "semantic-search>=0.0.0",
    "sentence-transformers>=5.1.2",
    "spacy>=3.8.9",
    "streamlit>=1.51.0",
    "supabase>=2.24.0",
]
